compiler/tools/fpp-check/test/state_machine/types/array_alias_format_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/types/array_alias_format_not_numeric.fpp:4.26
  array A = [3] T format "{.3f}"
                         ^
error: invalid format string: T is not a floating-point type
